bmt/bmt_v1_Namespace_bmt.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: '-1'
  name: bmt
  namespace: bmt
