bmt/bmt_apps-v1_Deployment_estimathon-scoreboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: estimathon-scoreboard
  namespace: bmt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: estimathon-scoreboard
  template:
    metadata:
      labels:
        app: estimathon-scoreboard
    spec:
      containers:
      - env:
        - name: CONTESTDOJO_EVENT_ID
          value: YXLHTTg2mkC0RyWEXpVz
        - name: DATABASE_URL
          valueFrom:
            secretKeyRef:
              key: uri
              name: estimathon-scoreboard-postgres-app
        - name: OIDC_ISSUER_URL
          value: https://contestdojo.com/api/oidc
        - name: OIDC_REDIRECT_URI
          value: https://estimathon.berkeley.mt/api/student/callback
        image: ghcr.io/berkeleymt/estimathon-scoreboard:latest
        name: estimathon-scoreboard
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 64Mi
      imagePullSecrets:
      - name: ghcr-auth
