bmt/bmt_v1_Service_estimathon-scoreboard-postgres-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: estimathon-scoreboard-postgres-lb
  namespace: bmt
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    cnpg.io/cluster: estimathon-scoreboard-postgres
    role: primary
  type: LoadBalancer
