bmt/bmt_v1_Service_estimathon-scoreboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: estimathon-scoreboard
  namespace: bmt
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: estimathon-scoreboard
