bmt/bmt_v1_Service_live.yaml
apiVersion: v1
kind: Service
metadata:
  name: live
  namespace: bmt
spec:
  ports:
  - port: 80
    targetPort: 3001
  selector:
    app: live
