bmt/bmt_v1_Service_mathematician-mash.yaml
apiVersion: v1
kind: Service
metadata:
  name: mathematician-mash
  namespace: bmt
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: mathematician-mash
