bmt/bmt_v1_Service_swire-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: swire-client
  namespace: bmt
spec:
  ports:
  - port: 80
  selector:
    app: swire-client
