bmt/bmt_v1_Service_swire-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: swire-server
  namespace: bmt
spec:
  ports:
  - port: 80
    targetPort: 3001
  selector:
    app: swire-server
