bmt/bmt_v1_Service_swire2.yaml
apiVersion: v1
kind: Service
metadata:
  name: swire2
  namespace: bmt
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: swire2
