bmt/bmt_networking.k8s.io-v1_Ingress_mathematician-mash-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: mathematician-mash-ingress
  namespace: bmt
spec:
  rules:
  - host: m2.berkeley.mt
    http:
      paths:
      - backend:
          service:
            name: mathematician-mash
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - m2.berkeley.mt
    secretName: mathematician-mash-ingress-tls
