bmt/bmt_networking.k8s.io-v1_Ingress_puzzle-hunt-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: puzzle-hunt-ingress
  namespace: bmt
spec:
  rules:
  - host: puzzlehunt.berkeley.mt
    http:
      paths:
      - backend:
          service:
            name: puzzle-hunt
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - puzzlehunt.berkeley.mt
    secretName: puzzle-hunt-ingress-tls
