bmt/bmt_networking.k8s.io-v1_Ingress_swire-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: swire-ingress
  namespace: bmt
spec:
  rules:
  - host: swire.berkeley.mt
    http:
      paths:
      - backend:
          service:
            name: swire-server
            port:
              number: 80
        path: /api/
        pathType: Prefix
      - backend:
          service:
            name: swire-client
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - swire.berkeley.mt
    secretName: swire-ingress-tls
